--- a/extension/sandbox.html
+++ b/extension/sandbox.html
@@ -3,14 +3,10 @@
 <head>
     <title>Sandbox</title>
     <!--
-      The order of these scripts is important.
-      1. The WASM backend for CPU processing.
-      2. The main TensorFlow.js library (tf.js).
-      3. The MediaPipe Hands library, a dependency for the model.
-      4. The hand-pose-detection model itself.
+      Updated script versions to a known compatible set to resolve library errors.
     -->
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm@3.18.0/dist/tf-backend-wasm.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.18.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.17.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm@4.17.0/dist/tf-backend-wasm.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4/dist/hands.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/hand-pose-detection@2.0.1/dist/hand-pose-detection.min.js"></script>
 </head>
